--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 # Encryption Middleware
 
-A language and implementation agnostic implementation of the popular encryption methods to be implemented as middleware in insecure channels.
+A language, implementation, and platform agnostic implementation of the popular encryption methods to be implemented as middleware in insecure channels.
